--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <h1> "Hello world!" </h1>
 
-<h1> SITO - PROVA </h1>
+<head> 
+<title> SITO - PROVA </title>
+</head>
 
-<h4> Ciao </h4>
-
-<h6> Ciao </h6>
+<body> 
+<h4> Questa è una prova. </h4>
+</body>
