--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1> "Hello world!" </h1>
+<html>
 
 <head> 
 <title> SITO - PROVA </title>
@@ -7,3 +7,4 @@
 <body> 
 <h4> Questa è una prova. </h4>
 </body>
+</html>
