--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body> 
 <h1> SITO DI PROVA </h1>
 <h4> Questa è una prova. </h4>
-  <a href="intestazioni" 
+<p> <a href="intestazioni">  intestazione.html </a> </p>
 </body>
 </html>
