--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body> 
 <h1> SITO DI PROVA </h1>
 <h4> Questa è una prova. </h4>
-<p> <a href="intestazioni">  intestazioni.html </a> </p>
+<p> <a href="intestazioni.html">  intestazioni.html </a> </p>
 </body>
 </html>
