--- a/foto.html
+++ b/foto.html
@@ -1,2 +1,9 @@
-<title> Immagine: </title>
-<img scr=“ABC.jpg”>
+<head> <title> Immagine. </title>
+
+<body> Immagine: 
+
+<center>
+  <img scr=“ABC.jpg”>
+</center>
+
+  </head>
