--- a/foto.html
+++ b/foto.html
@@ -1,7 +1,9 @@
 <head> 
 
 <body> 
-<l1> Immagine di un pulcino che dice buongiorno. </l1>
+<l1> 
+ <font size="45">  Immagine di un pulcino che dice buongiorno. </font>
+</l1>
 
   <center>
   <img
