--- a/foto.html
+++ b/foto.html
@@ -2,7 +2,7 @@
 
 <body> 
 <l1> 
- <font size="45">  Immagine di un pulcino che dice buongiorno. </font>
+ <font size="45">  Immagine del pulcino Pablo che dice buongiorno. </font>
 </l1>
 
 
