--- a/tabella.html
+++ b/tabella.html
@@ -7,14 +7,14 @@
 <table border="1px">
   <tr colspan="5"> Lorem </tr>
   <tr>
-    <td> Lorem </td>
-    <td> Lorem </td>
-    <td> Lorem </td>
+    <td> Marian </td>
+    <td> 6 </td>
+    <td background= "red"> 2 </td>
   </tr> 
   <tr> 
-    <td> Lorem </td>
-    <td> Lorem </td>
-    <td> Lorem </td>
+    <td> Nikolas </td>
+    <td> 10 </td>
+    <td> 8 </td>
   </tr>
   
 </table>
