--- a/paragrafi.html
+++ b/paragrafi.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Empireo</title>
+</head>
+<body>
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam doloremque obcaecati ex, ducimus ipsa sapiente possimus maxime deserunt itaque? Voluptate, nisi! Error nulla, sint reprehenderit consequatur temporibus voluptate quos! Harum.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, nam ut excepturi, mollitia deserunt voluptates sit exercitationem debitis recusandae ex commodi molestias aliquid, minima iusto ullam. Vel sapiente in iure!</p>
+</body>
+</html>
