--- a/tabella.html
+++ b/tabella.html
@@ -9,7 +9,7 @@
   <tr>
     <td> Marian </td>
     <td> 6 </td>
-    <td bgcolor="red"> 2 </td>
+    <td bgcolor="red"> Lorem </td>
   </tr> 
   <tr> 
     <td> Nikolas </td>
