--- a/tabella.html
+++ b/tabella.html
@@ -8,14 +8,18 @@
   <tr colspan="5"> Lorem </tr>
   <tr>
     <td> Marian </td>
-    <td> 6 </td>
-    <td bgcolor="red"> Lorem </td>
+    <td bgcolor="green"> 6 </td>
+    <td> Matematica </td>
   </tr> 
   <tr> 
     <td> Nikolas </td>
-    <td> 10 </td>
-    <td> 8 </td>
+    <td bgcolor="green"> 10 </td>
+    <td> Italiano </td>
   </tr>
+<tr>
+  <td> Luca </td>
+  <td bgcolor="yellow"> 5.5 </td>
+</tr>
   
 </table>
   
