--- a/tabella.html
+++ b/tabella.html
@@ -9,16 +9,23 @@
   <tr>
     <td> Marian </td>
     <td bgcolor="green"> 6 </td>
+    <td bgcolor="orange"> 5 </td>
+    <td bgcolor="green"> 8 </td>
     <td> Matematica </td>
   </tr> 
   <tr> 
     <td> Nikolas </td>
     <td bgcolor="green"> 10 </td>
-    <td> Italiano </td>
+    <td bgcolor="red"> 4 </td>
+    <td bgcolor="red"> 2.1 </td>
+    <td> Tps </td>
   </tr>
 <tr>
   <td> Luca </td>
   <td bgcolor="yellow"> 5.5 </td>
+  <td bgcolor="yellow"> 5.25 </td>
+  <td bgcolor="green"> 6.25 </td>
+  <td> Storia </td>
 </tr>
   
 </table>
