--- a/formattazione.html
+++ b/formattazione.html
@@ -1,1 +1,9 @@
+<head> Formattazione del testo. </head>
+<body>
+  <i> Questo è un testo in corsivo. </i>
+  <u> Questo è un testo sottolineato. </u>
+  <b> Questo è un testo in grassetto.</b>
+</body>
+
+
 
