--- a/formattazione.html
+++ b/formattazione.html
@@ -1,8 +1,16 @@
-<head> Formattazione del testo. </head>
+<head> 
+  <title> Formattazione. </title>
+  <l1>Formattazione del testo.</l1>
+</head>
 <body>
-  <i> Questo è un testo in corsivo. </i>
+  <br>
+ <p> <i> Questo è un testo in corsivo. </i>
+<br>
   <u> Questo è un testo sottolineato. </u>
+  <br>
   <b> Questo è un testo in grassetto.</b>
+<br>
+ </p>
 </body>
 
 
