--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <h1> SITO DI PROVA </h1>
 <h4> Questa è una prova. </h4>
 <p> <a href="intestazione.html">  intestazione.html </a> </p>
+  <p> <a href="formattazione.html">  formattazione.html </a> </p>
+  <p> <a href="foto.html">  foto.html </a> </p>
+  <p> <a href="liste.html">  liste.html </a> </p>
+  <p> <a href="paragrafi.html">  paragrafi.html </a> </p>
+  <p> <a href="tabella.html">  formattazione.html </a> </p>
 </body>
 </html>
