--- a/esercitazione.html
+++ b/esercitazione.html
@@ -6,9 +6,9 @@
   <body>
     <center>
       <img
-        src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grz6pgWxm7xpMnfjEeuyxSJBRt7_HkKAMrUBdTPpBgbgASvBuBBMdtBjAJMu89iGgA8ZnMmBkYWCuAjEgGEODjKy3KKUgsSszVK89MKckQ1DAgEgizu7iGOHr6BAMA0qnK_-kAAAA?wid=850.jpg"
+        src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grz6pgWxm7xpMnfjEeuyxSJBRt7_HkKAMrUBdTPpBgbgASvBuBBMdtBjAJMu89iGgA8ZnMmBkYWCuAjEgGEODjKy3KKUgsSszVK89MKckQ1DAgEgizu7iGOHr6BAMA0qnK_-kAAAA?wid=850"
         align="left"
-        border="5%" 
+        border="2%" 
         height="20%"
         width="25%"
         >
