--- a/esercitazione.html
+++ b/esercitazione.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title> Automobile in vendita. </title>
+    <center> 
+      <font size="5%" color="red" face="Comic Sans">
+        <b>Informazioni sull'automobile da comprare:</b>
+      </font>
+    </center>
   </head>
 
   <body>
