--- a/esercitazione.html
+++ b/esercitazione.html
@@ -16,14 +16,15 @@
         height="20%"
         width="50%"
         >
+    </center>
       <ul>
         <li> Può essere elettric.a </li>
         <li> Gomme adatte a qualsiasi terreno. </li>
         <li> Accesso digitale anche da telefono. </li>
-
-        
       </ul>
-    </center>
+      <p>
+      <p>lorem </p>
+      <a href=
 
 
 
