--- a/esercitazione.html
+++ b/esercitazione.html
@@ -23,7 +23,8 @@
         <li> Accesso digitale anche da telefono. </li>
       </ul>
       <p>
-      <p>lorem </p>
+      <p>  </p>
+    <a href="DownloadInProgress.github.io/concessionaria.html"
       <a href=
 
 
