--- a/esercitazione.html
+++ b/esercitazione.html
@@ -24,8 +24,7 @@
       </ul>
       <p>
       <p>  </p>
-    <a href="DownloadInProgress.github.io/concessionaria.html"
-      <a href=
+    <a href="DownloadInProgress.github.io/concessionaria.html">
 
 
 
