--- a/esercitazione.html
+++ b/esercitazione.html
@@ -23,7 +23,7 @@
         <li> Accesso digitale anche da telefono. </li>
       </ul>
       <p>
-      <p>  </p>
+      <p> lorem()</p>
     <a href="DownloadInProgress.github.io/concessionaria.html">
 
 
