--- a/esercitazione.html
+++ b/esercitazione.html
@@ -24,7 +24,7 @@
       </ul>
       <p>
       <p> lorem()</p>
-    <a href="DownloadInProgress.github.io/concessionaria.html">
+    <a href="concessionaria.html"> 
 
 
 
