--- a/esercitazione.html
+++ b/esercitazione.html
@@ -23,7 +23,7 @@
         <li> Accesso digitale anche da telefono. </li>
       </ul>
       <p>
-      <p> lorem()</p>
+      <p> Emmet </p>
     <a href="concessionaria.html"> 
 
 
