--- a/esercitazione.html
+++ b/esercitazione.html
@@ -22,9 +22,7 @@
         <li> Gomme adatte a qualsiasi terreno. </li>
         <li> Accesso digitale anche da telefono. </li>
       </ul>
-      <p>
-      <p> Emmet </p>
-    <a href="concessionaria.html"> 
+      <p>  <a href="concessionaria.html"> Link per siti utili. </a> </p>
 
 
 
