--- a/concessionaria.html
+++ b/concessionaria.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> concessionarie che vendono auto. </title>
-    <h6> Link che potrebbero servire: </h6>
+    <font sixe="5%" color="blue" face="Comic Sans"> Link che potrebbero servire: </font>
   </head>
   
   <body>
