--- a/esercitazione.html
+++ b/esercitazione.html
@@ -23,7 +23,16 @@
         <li> Accesso digitale anche da telefono. </li>
       </ul>
       <p>  <a href="concessionaria.html"> Link per siti utili. </a> </p>
-
+    <FORM
+      <input type="text" 
+      name="Nome" 
+      size="5"
+      value="concessionara"
+      maxlenght="80"
+      >
+      
+      
+    </FORM>
 
 
 
