--- a/esercitazione.html
+++ b/esercitazione.html
@@ -30,8 +30,9 @@
       value="concessionara"
       maxlenght="80"
       >
-      
-      
+      <input type="checkbox" 
+        name="Acconsenti hai termini di servizio?"
+      >
     </FORM>
 
 
