--- a/esercitazione.html
+++ b/esercitazione.html
@@ -32,7 +32,11 @@
       >
       <input type="checkbox" 
         name="Acconsenti hai termini di servizio?"
-      >
+     > acconsenti ai termini di servizio?
+      <input type="radio"
+        name="audi"> audi
+
+        
     </FORM>
 
 
