--- a/esercitazione.html
+++ b/esercitazione.html
@@ -33,8 +33,10 @@
       <input type="checkbox" 
         name="Acconsenti hai termini di servizio?"
      > acconsenti ai termini di servizio?
-      <input type="radio"
-        name="audi"> audi
+      <input type="radio"name="audi A1"> audi A1
+      <input type="radio"name="audi A3"> audi A3
+      <input type="radio"name="audi A4"> audi A4
+      <input type="radio"name="audi rolload"> audi rolload
 
         
     </FORM>
