--- a/esercitazione.html
+++ b/esercitazione.html
@@ -34,6 +34,7 @@
         name="Acconsenti hai termini di servizio?"
      > acconsenti ai termini di servizio?
       <br>
+      Che tipo preferisci?
       <input type="radio"name="audi A1"> audi A1
        <br>
       <input type="radio"name="audi A3"> audi A3
