--- a/esercitazione.html
+++ b/esercitazione.html
@@ -27,22 +27,22 @@
       <input type="text" 
       name="Nome" 
       size="5"
-      value="concessionara"
+      value="concessionaria"
       maxlenght="80"
       >
       <input type="checkbox" 
-        name="Acconsenti hai termini di servizio?"
-     > acconsenti ai termini di servizio?
+        name="Acconsenti al trattamento dati?"
+     > acconsenti al trattamento dati?
       <br>
-      Che tipo preferisci?
-      <input type="radio"name="audi A1"> audi A1
-       <br>
-      <input type="radio"name="audi A3"> audi A3
-       <br>
-      <input type="radio"name="audi A4"> audi A4
-       <br>
-      <input type="radio"name="audi rolload"> audi rolload
-
+      <p>Che tipo preferisci?
+        <input type="radio"name="audiA1"> audi A1
+           <br>
+        <input type="radio"name="audiA3"> audi A3
+           <br>
+        <input type="radio"name="audiA4"> audi A4
+           <br>
+        <input type="radio"name="audiRolload"> audi rolload
+      </p>
         
     </FORM>
 
