--- a/esercitazione.html
+++ b/esercitazione.html
@@ -34,7 +34,7 @@
         name="Acconsenti al trattamento dati?"
      > acconsenti al trattamento dati?
       <br>
-      <p>Che tipo preferisci?
+       <font size="15%" face="Arial Black"> Che tipo preferisci? </font>
          <br>
         <input type="radio"name="audiA1"> audi A1
            <br>
@@ -43,7 +43,7 @@
         <input type="radio"name="audiA4"> audi A4
            <br>
         <input type="radio"name="audiRolload"> audi rolload
-      </p>
+  
         
     </FORM>
 
