--- a/esercitazione.html
+++ b/esercitazione.html
@@ -43,7 +43,10 @@
         <input type="radio"name="audiA4"> audi A4
            <br>
         <input type="radio"name="audiRolload"> audi rolload
-  
+  <br>
+      <input type="submit" value="invia">
+      <br>
+      <input type="reset" value="reset">
         
     </FORM>
 
