--- a/esercitazione.html
+++ b/esercitazione.html
@@ -34,7 +34,7 @@
         name="Acconsenti al trattamento dati?"
      > acconsenti al trattamento dati?
       <br>
-       <font size="5%" face="Arial Black"> Che tipo preferisci? </font>
+       <font size="5%" face="Comic Sans"> Che tipo preferisci? </font>
          <br>
         <input type="radio"name="audiA1"> audi A1
            <br>
