--- a/esercitazione.html
+++ b/esercitazione.html
@@ -18,7 +18,7 @@
         >
     </center>
       <ul>
-        <li> Può essere elettric.a </li>
+        <li> Può essere elettrica. </li>
         <li> Gomme adatte a qualsiasi terreno. </li>
         <li> Accesso digitale anche da telefono. </li>
       </ul>
@@ -34,18 +34,18 @@
         name="Acconsenti al trattamento dati?"
      > acconsenti al trattamento dati?
       <br>
-       <font size="5%" face="Comic Sans"> Che tipo preferisci? </font>
-         <br>
-        <input type="radio"name="audiA1"> audi A1
+         <font size="5%" face="Comic Sans"> Che tipo preferisci? </font>
            <br>
-        <input type="radio"name="audiA3"> audi A3
+          <input type="radio"name="audiA1"> audi A1
            <br>
-        <input type="radio"name="audiA4"> audi A4
+          <input type="radio"name="audiA3"> audi A3
            <br>
-        <input type="radio"name="audiRolload"> audi rolload
+          <input type="radio"name="audiA4"> audi A4
+           <br>
+          <input type="radio"name="audiRolload"> audi rolload
   <br>
       <input type="submit" value="invia">
-      <br>
+        <br>
       <input type="reset" value="reset">
         
     </FORM>
