--- a/esercitazione.html
+++ b/esercitazione.html
@@ -34,7 +34,7 @@
         name="Acconsenti al trattamento dati?"
      > acconsenti al trattamento dati?
       <br>
-         <font size="5%" face="Comic Sans"> Che tipo preferisci? </font>
+           Che tipo preferisci?
            <br>
           <input type="radio"name="audiA1"> audi A1
            <br>
