--- a/esercitazione.html
+++ b/esercitazione.html
@@ -24,6 +24,7 @@
       </ul>
       <p>  <a href="concessionaria.html"> Link per siti utili. </a> </p>
     <FORM
+      <text= "Inserisci il nome della concessionaria." > 
       <input type="text" 
       name="Nome" 
       size="5"
