--- a/esercitazione.html
+++ b/esercitazione.html
@@ -28,7 +28,7 @@
       <input type="text" 
       name="Nome" 
       size="25"
-      value="concessionaria"
+      value="Nome concessionaria:"
       maxlenght="80"
       >
       <br>
