--- a/esercitazione.html
+++ b/esercitazione.html
@@ -24,8 +24,8 @@
       </ul>
       <p>  <a href="concessionaria.html"> Link per siti utili. </a> </p>
     <FORM
-      <text= "Inserisci il nome della concessionaria." > 
-      <input type="text" 
+      <form face="Arial"> Le tue preferenze: </form>
+     Nome della concessionaria: <input type="text" 
       name="Nome" 
       size="25"
       value="Nome concessionaria:"
