--- a/esercitazione.html
+++ b/esercitazione.html
@@ -28,7 +28,7 @@
      Nome della concessionaria: <input type="text" 
       name="Nome" 
       size="25"
-      value="Nome concessionaria:"
+      value=" "
       maxlenght="80"
       >
       <br>
