--- a/esercitazione.html
+++ b/esercitazione.html
@@ -24,7 +24,7 @@
       </ul>
       <p>  <a href="concessionaria.html"> Link per siti utili. </a> </p>
     <FORM
-      <form face="Arial"> Le tue preferenze: </form>
+      <form face="Arial" color="red" size="+1"> Le tue preferenze: </form>
      Nome della concessionaria: <input type="text" 
       name="Nome" 
       size="25"
