--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <p> <a href="liste.html">  liste.html </a> </p>
   <p> <a href="paragrafi.html">  paragrafi.html </a> </p>
   <p> <a href="tabella.html">  formattazione.html </a> </p>
+  <p> <a href="esercitazione.html"> </a> </p>
 </body>
 </html>
