--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p> <a href="liste.html">  liste.html </a> </p>
   <p> <a href="paragrafi.html">  paragrafi.html </a> </p>
   <p> <a href="tabella.html">  formattazione.html </a> </p>
-  <p> <a href="esercitazione.html"> </a> </p>
+  <p> <a href="esercitazione.html"> esercitazione.html </a> </p>
+  <p> <a href="registrazione.html"> registrazione.html </a>/ </p>
 </body>
 </html>
