--- a/registrazione.html
+++ b/registrazione.html
@@ -2,10 +2,46 @@
   <head>
     <title> Registrazione. </title>
     <l1> Registrazione al sito d'imbarco. </l1>
+    <br>
     <l3> Compilare tutti i campi sotto: </l3>
   </head>
 
   <body>
+    Nome: 
+    <input type="text"
+      name="Nome"
+      size="64"
+      value=" "
+      maxlenght="118">
+    <br>
+      Cognome:
+    <input type="text"
+      name="Cognome"
+      size="64"
+      value=" "
+      maxlenght="118">
+    Data di nascita:
+    <br> 
+    Giorno:    
+    <input type="text"
+      name="gg"
+      size="2"
+      value=" "
+      maxlenght="2">
+        
+    Mese:
+    <input type="text"
+      name="mese"
+      size="9"
+      value=" "
+      maxlenght="9">
+    <br>
+    Anno:
+        <input type="text"
+      name="anno"
+      size="4"
+      value=" "
+      maxlenght="4">
     
   </body>
 </html>
