--- a/registrazione.html
+++ b/registrazione.html
@@ -4,6 +4,7 @@
     <l1> Registrazione al sito d'imbarco. </l1>
     <br>
     <l3> Compilare tutti i campi sotto: </l3>
+    <br>
   </head>
 
   <body>
@@ -45,8 +46,16 @@
       size="4"
       value=" "
       maxlenght="4">
+     <br>
+     Email:
+         <input type="text"
+      name="mail"
+      size="20"
+      value=" "
+      maxlenght="64">
   </p>
     <p> 
+      
     </p>
   </body>
 </html>
