--- a/registrazione.html
+++ b/registrazione.html
@@ -46,7 +46,11 @@
       size="4"
       value=" "
       maxlenght="4">
-     <br>
+    <br>
+      Maschio: <input type="radio">
+      <br>
+      Femmina: <input type="radio">
+      <br>
      Email:
          <input type="text"
       name="mail"
@@ -82,6 +86,8 @@
         <option> Sicilia </option>
         <option> Sardegna </option>
       </select>
+
+      <input type="checkbox" checked> Acconsenti alla privacy?
     </p>
   </body>
 </html>
