--- a/registrazione.html
+++ b/registrazione.html
@@ -64,27 +64,27 @@
        size="20">
   </p>
     <p> 
-      <select size="1">
-        <option> Valle d'Aosta </option>
-        <option> Trentino Alto Adige </option>
-        <option> Lombardia </option>
-        <option> Piemonte </option>
-        <option> Friuli Venezia-Giulia </option>
-        <option> Emilia Romagna </option>
-        <option> Liguria </option>
-        <option> Toscana </option>
-        <option> Marche </option>
-        <option> Veneto </option>
-        <option> Umbria </option>
-        <option> Abruzzo </option>
-        <option> Lazio </option>
-        <option> Molise </option>
-        <option> Campania </option>
-        <option> Puglia </option>
-        <option> Basilicata </option>
-        <option> Calabria </option>
-        <option> Sicilia </option>
-        <option> Sardegna </option>
+      <select size="1" name="regione">
+        <option value=""> Valle d'Aosta </option>
+        <option value=""> Trentino Alto Adige </option>
+        <option value=""> Lombardia </option>
+        <option value=""> Piemonte </option>
+        <option value=""> Friuli Venezia-Giulia </option>
+        <option value=""> Emilia Romagna </option>
+        <option value=""> Liguria </option>
+        <option value=""> Toscana </option>
+        <option value=""> Marche </option>
+        <option value=""> Veneto </option>
+        <option value=""> Umbria </option>
+        <option value=""> Abruzzo </option>
+        <option value=""> Lazio </option>
+        <option value=""> Molise </option>
+        <option value=""> Campania </option>
+        <option value=""> Puglia </option>
+        <option value=""> Basilicata </option>
+        <option value=""> Calabria </option>
+        <option value=""> Sicilia </option>
+        <option value=""> Sardegna </option>
       </select>
 
       <input type="checkbox" checked> Acconsenti alla privacy?
