--- a/registrazione.html
+++ b/registrazione.html
@@ -86,8 +86,16 @@
         <option value=""> Sicilia </option>
         <option value=""> Sardegna </option>
       </select>
-
+        <br>
+      note:
       <input type="checkbox" checked> Acconsenti alla privacy?
+      <br>
+      <input type="textarea" 
+        name="note"
+        raws="5"
+        cols="5"
+        Scrivi qui!
+      >
     </p>
   </body>
 </html>
