--- a/registrazione.html
+++ b/registrazione.html
@@ -87,9 +87,9 @@
         <option value=""> Sardegna </option>
       </select>
         <br>
-      note:
       <input type="checkbox" checked> Acconsenti alla privacy?
       <br>
+    note:
       <input type="textarea" 
         name="note"
         raws="5"
@@ -97,5 +97,7 @@
         Scrivi qui!
       >
     </p>
+    <br>
+    <input type="submit" value="invia">
   </body>
 </html>
