--- a/registrazione.html
+++ b/registrazione.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title> Registrazione. </title>
-    <l1> Registrazione al sito d'imbarco. </l1>
+    <h5> Registrazione al sito d'imbarco. </h5>
     <br>
-    <l3> Compilare tutti i campi sotto: </l3>
+    <h3> Compilare tutti i campi sotto: </h3>
     
   </head>
 
