--- a/registrazione.html
+++ b/registrazione.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <title> Registrazione. </title>
-    <h5> Registrazione al sito d'imbarco. </h5>
-    <br>
-    <h3> Compilare tutti i campi sotto: </h3>
+    <h1> Registrazione al sito d'imbarco. </h1>
     
   </head>
 
   <body>
+  
+    <p> <h3> Compilare tutti i campi sotto: </h3> </p>
     <br>
     Nome: 
     <input type="text"
