--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <p> <a href="foto.html">  foto.html </a> </p>
   <p> <a href="liste.html">  liste.html </a> </p>
   <p> <a href="paragrafi.html">  paragrafi.html </a> </p>
-  <p> <a href="tabella.html">  formattazione.html </a> </p>
+  <p> <a href="tabella.html">  tabella.html </a> </p>
   <p> <a href="esercitazione.html"> esercitazione.html </a> </p>
-  <p> <a href="registrazione.html"> registrazione.html </a>/ </p>
+  <p> <a href="registrazione.html"> registrazione.html </a> </p>
 </body>
 </html>
