--- a/formattazione.html
+++ b/formattazione.html
@@ -9,6 +9,7 @@
   <u> Questo è un testo sottolineato. </u>
   <br>
   <b> Questo è un testo in grassetto.</b>
+   <s> Questo è un testo barrato.  </s>
 <br>
  </p>
 </body>
