--- a/formattazione.html
+++ b/formattazione.html
@@ -4,11 +4,12 @@
 </head>
 <body>
   <br>
- <p> <i> Questo è un testo in corsivo. </i>
+   <i> Questo è un testo in corsivo. </i>
 <br>
-  <u> Questo è un testo sottolineato. </u>
+  <u> Questo è un testo sottolineato. </u>  
   <br>
   <b> Questo è un testo in grassetto.</b>
+  <br>
    <s> Questo è un testo barrato.  </s>
 <br>
  </p>
