--- a/Ricetta.html
+++ b/Ricetta.html
@@ -10,7 +10,19 @@
     width="50%"
     height="50%"
   >
-  
+  <table align="right">
+    <tr> 
+      <td> Difficoltà </td>
+      <td> Prezzo </td>
+      <td> Tempo </td>
+    </tr>
+    <tr>
+      <td bgcolor="green"> Facile! </td>
+      <td> 7 ˜ 8 $  </td>  
+      <td> 60 minuti! </td>
+    </tr>
+    
+  </table>
   
   
   </body>
