--- a/Ricetta.html
+++ b/Ricetta.html
@@ -23,7 +23,19 @@
     </tr>
     
   </table>
-  
-  
+  <br>
+
+<ul type="1"> 
+  <li> 3 uova </li>
+  <li> 150g di zucchero semolato </li>
+  <li> 230g di farina 00 </li>
+  <li> 60g di cacao amaro </li>
+  <li> 1 bustina di lievito </li>
+  <li> 1 bicchiere di latte temperatura ambiente </li>
+  <li> 100ml di olio di semi </li>
+  <li> 120g di nutella </li>
+</ul>
+
+    
   </body>
 </html>
