--- a/Ricetta.html
+++ b/Ricetta.html
@@ -10,7 +10,7 @@
     width="50%"
     height="50%"
   >
-  <table align="right">
+  <table align="right" border="1%">
     <tr> 
       <td> Difficoltà </td>
       <td> Prezzo </td>
