--- a/tabellaCss.html
+++ b/tabellaCss.html
@@ -4,10 +4,9 @@
   </head>
   <body>
     <style> 
-      h1 {
-        font size : "2px"
-        font weight : "bold"
-      } Your mom
+     <div id="testata"> 
+      <h1> Titolo </h1>
+      <p> Testo </p>
     </style>
   </body>
 </html>
