--- a/tabellaCss.html
+++ b/tabellaCss.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <style> 
-     <div id="testata"> 
+     <div> 
       <h1> Titolo </h1>
       <p> Testo </p>
       </div>
