--- a/tabellaCss.html
+++ b/tabellaCss.html
@@ -1,13 +1,4 @@
 <html>
-  <head>
-    
-  </head>
-  <body>
-    <style> 
-     <div> 
-      <h1> Titolo </h1>
-      <p> Testo </p>
-      </div>
-    </style>
-  </body>
+h1{color : blue}bleeeeah
+
 </html>
