--- a/tabellaCss.html
+++ b/tabellaCss.html
@@ -1,4 +1,13 @@
 <html>
-h1{color : blue}bleeeeah
-
+  <titolo> Luca </titolo>
+  <style> 
+h1{
+  color : blue;
+  font-size : 36px;
+  text-align : center;
+  font-family : comic sans ms;
+  letter-spacing: 2px;
+ }
+</style>
+  
 </html>
