--- a/tabellaCss.html
+++ b/tabellaCss.html
@@ -1,13 +1,17 @@
 <html>
+  <head> 
   <titolo> Luca </titolo>
+    <style type="text/css">
+  </head>
   <style> 
-h1{
-  color : blue;
-  font-size : 1000px;
-  text-align : center;
-  font-family : comic sans ms;
-  letter-spacing: 100px;
- }
+    table {
+      width : 80%;
+      margin: 20px auto;
+      font-family: Arial;
+    }
+    th, td {
+      border
+    }
 </style>
   
 </html>
