--- a/tabellaCss.html
+++ b/tabellaCss.html
@@ -1,17 +1,13 @@
-<html>
-  <head> 
-  <titolo> Luca </titolo>
-    <style type="text/css">
-  </head>
-  <style> 
-    table {
-      width : 80%;
-      margin: 20px auto;
-      font-family: Arial;
-    }
-    th, td {
-      border
-    }
-</style>
-  
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewpoint" content="width= device-width, initial-scale=1.0">
+</head>  
+  <body>
+    <div id="header"> </div>
+    <div id="left"> </div>
+    <div id="article"> </div>
+    <div id="right"> </div>
+    <div id="footer"> </div>   
+  </body>
 </html>
