--- a/tabellaCss.html
+++ b/tabellaCss.html
@@ -2,6 +2,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewpoint" content="width= device-width, initial-scale=1.0">
+  <style>
+    #header{width 100%
+  </style>
 </head>  
   <body>
     <div id="header"> </div>
@@ -9,5 +12,6 @@
     <div id="article"> </div>
     <div id="right"> </div>
     <div id="footer"> </div>   
+    
   </body>
 </html>
