--- a/aiuto.html
+++ b/aiuto.html
@@ -1,1 +1,36 @@
+<html>
+  <head>
+    <style type="text/css">   
+      table {
+        border: solid 2 px;
+        border-collapse:collapse; 
+      }
 
+      thread{
+        background: black; 
+        font-weight: bold;
+        text-align: center;
+      }
+
+      td,th {
+        border:1 px;
+        border-style: solid none;
+      }
+
+      </style>
+  </head>
+  
+  <body>
+
+<table>
+  <thread>
+    <td> Esempio 
+    <th> Lorem </th>
+    <th> Lorem </th>
+    <th> Lorem </th>
+    </td>
+  </thread>
+</table>
+    
+  </body>
+</html>
