--- a/aiuto.html
+++ b/aiuto.html
@@ -24,11 +24,11 @@
 
 <table>
   <thread>
-    <td> Esempio 
-    <th> Lorem </th>
-    <th> Lorem </th>
-    <th> Lorem </th>
-    </td>
+    <th> Esempio 
+    <td> Lorem </td>
+    <td> Lorem </td>
+    <td> Lorem </td>
+    </th>
   </thread>
 </table>
     
