--- a/aiuto.html
+++ b/aiuto.html
@@ -4,6 +4,8 @@
       table {
         border: solid 2 px;
         border-collapse:collapse; 
+         height: 750 px;
+        width: 700 px;
       }
 
       thread{
@@ -12,7 +14,7 @@
         text-align: center;
       }
 
-      td,th {
+      td,th { 
         border:1 px;
         border-style: solid none;
       }
