--- a/aiuto.html
+++ b/aiuto.html
@@ -2,7 +2,7 @@
   <head>
     <style type="text/css">   
       table {
-        border: solid 2 px;
+        border: 2 px;
         border-collapse:collapse; 
          height: 750 px;
         width: 700 px;
@@ -12,6 +12,7 @@
         background: black; 
         font-weight: bold;
         text-align: center;
+        border: 2 px;
       }
 
       td,th { 
@@ -26,6 +27,18 @@
 
 <table>
   <thread>
+    <th> Esempio 
+    <td> Lorem </td>
+    <td> Lorem </td>
+    <td> Lorem </td>
+    </th>
+
+    <th> Esempio 
+    <td> Lorem </td>
+    <td> Lorem </td>
+    <td> Lorem </td>
+    </th>
+
     <th> Esempio 
     <td> Lorem </td>
     <td> Lorem </td>
