--- a/aiuto.html
+++ b/aiuto.html
@@ -27,23 +27,23 @@
 
 <table>
   <thread>
-    <th> Esempio 
-    <td> Lorem </td>
-    <td> Lorem </td>
-    <td> Lorem </td>
-    </th>
+    <td> Esempio 
+    <tr> Lorem </tr>
+    <tr> Lorem </tr>
+    <tr> Lorem </tr>
+    </td>
 
-    <th> Esempio 
-    <td> Lorem </td>
-    <td> Lorem </td>
-    <td> Lorem </td>
-    </th>
+    <td> Esempio 
+    <tr> Lorem </tr>
+    <tr> Lorem </tr>
+    <tr> Lorem </tr>
+    </td>
 
-    <th> Esempio 
-    <td> Lorem </td>
-    <td> Lorem </td>
-    <td> Lorem </td>
-    </th>
+    <td> Esempio 
+    <tr> Lorem </tr>
+    <tr> Lorem </tr>
+    <tr> Lorem </tr>
+    </td>
   </thread>
 </table>
     
