--- a/aiuto.html
+++ b/aiuto.html
@@ -27,23 +27,23 @@
 
 <table>
   <thread>
-    <td> Esempio 
+    <tr> Esempio 
     <tr> Lorem </tr>
     <tr> Lorem </tr>
     <tr> Lorem </tr>
-    </td>
+    </tr>
 
-    <td> Esempio 
-    <tr> Lorem </tr>
-    <tr> Lorem </tr>
-    <tr> Lorem </tr>
-    </td>
+    <tr> Esempio 
+    <td> Lorem </td>
+    <td> Lorem </td>
+    <td> Lorem </td>
+    </tr>
 
-    <td> Esempio 
-    <tr> Lorem </tr>
-    <tr> Lorem </tr>
-    <tr> Lorem </tr>
-    </td>
+    <tr> Esempio 
+    <td> Lorem </td>
+    <td> Lorem </td>
+    <td> Lorem </td>
+    </tr>
   </thread>
 </table>
     
