--- a/aiuto.html
+++ b/aiuto.html
@@ -29,19 +29,19 @@
   <thread>
     <tr> Esempio 
     <tr> Lorem </tr>
-    <tr> Lorem </tr>
+    <tr bgcolor= "grey" > Lorem </tr>
     <tr> Lorem </tr>
     </tr>
 
     <tr> Esempio 
     <td> Lorem </td>
-    <td> Lorem </td>
+    <td bgcolor= "grey"> Lorem </td>
     <td> Lorem </td>
     </tr>
 
     <tr> Esempio 
     <td> Lorem </td>
-    <td> Lorem </td>
+    <td bgcolor= "grey"> Lorem </td>
     <td> Lorem </td>
     </tr>
   </thread>
