--- a/aiuto.html
+++ b/aiuto.html
@@ -12,6 +12,8 @@
       td,th { 
         border:1 px;
         border-style: solid none;
+        height: 15 px;
+        width: 20 px;
       }
 
       </style>
