--- a/aiuto.html
+++ b/aiuto.html
@@ -23,9 +23,9 @@
 
 <table>
     <tr> 
-    <tr> Lorem </tr>
-    <tr bgcolor= "grey" > Lorem </tr>
-    <tr> Lorem </tr>
+    <td> Lorem </td>
+    <td bgcolor= "grey" > Lorem </td>
+    <td> Lorem </td>
     </tr>
 
     <tr> 
