--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -2,8 +2,9 @@
   <head>
     <title> Box Flottanti</title>
     <h1> Come fare i box flottanti</h1>
-    <style="text/css">
-      div{ float=none;}
+    <style>
+      div{ float=none;
+         }
     </style>
   </head>
   <body>
