--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -4,6 +4,7 @@
     <h1> Come fare i box flottanti</h1>
     <style>
       div{ float=none;
+          background-color= red;
          }
     </style>
   </head>
