--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -3,9 +3,25 @@
     <title> Box Flottanti</title>
     <h1> Come fare i box flottanti</h1>
     <style>
-      div{ float=none;
+      .div{ 
+          width= 50%;
+          overflow= auto;
           background-color= red;
          }
+
+      .div {
+        <iframe width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/TxcJ2drr554?si=hC8sp5dGxVJ9jJfM" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen>
+        </iframe>
+        }
+
+        
     </style>
   </head>
   <body>
