--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -25,8 +25,12 @@
     </style>
   </head>
   <body>
-    <div>
-      
+    <div class="container clearfix">
+      <div class="box"> Box1 </div>
+      <div class="box"> Box2 </div>
+      <div class="box"> Box3 </div>
+      <div class="box"> Box4 </div>
     </div>
+    
   </body>
 </html>
