--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head> 
 <title> SITO - PROVA </title>
-<link rel="icon" type="image/x-icon" href="images/favicon.ico" 
+<link rel="icon" type="image/x-icon" href="C:\Users\studente\Documents\fotos" 
 </head>
 
 <body> 
