--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head> 
 <title> SITO - PROVA </title>
-<link rel="icon" type="image/x-icon" href=" " 
+<link rel="icon" type="image/x-icon" href="house.svg.png">
 </head>
 
 <body> 
