--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -3,11 +3,13 @@
     <title> Box Flottanti</title>
     <h1> Come fare i box flottanti</h1>
     <style>
-     div {
-      width: 300 px;
-      border: 15 px solid green;
-      padding: 50 px;
-      margin: 20 px;
+     .div {
+      width= "300 px";
+      margin= "10px" ;
+       background-color="lightblue";
+      border= "15 px" "solid green";
+      padding= "50 px";
+      margin= "20 px";
       }
 
       .div {
