--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -4,12 +4,12 @@
     <h1> Come fare i box flottanti</h1>
     <style>
      .div {
-      width= "300 px";
-      margin= "10px" ;
-       background-color="lightblue";
-      border= "15 px" "solid green";
-      padding= "50 px";
-      margin= "20 px";
+      width:300 px;
+      margin:10 px ;
+       background-color:lightblue;
+      border: 15 px solid green;
+      padding: 50 px;
+      margin: 20 px;
       }
 
       .div {
