--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <title> SITO - PROVA </title>
 <link rel="icon" type="image/x-icon" href="house.svg.png">
 </head>
-  nome:icona persona
-  email:icona busta
-  telefono icona correta
 
-<body> 
+
+<body>   
+
 <h1> SITO DI PROVA </h1>
-<h4> Questa è una prova. </h4>
-  <i class="glyphicon glyphicon-user"></i>
-<i class="glyphicon glyphicon-envelope"></i>
-  <i class="material-icons">computer</i>
+<h2> Questa è una prova. </h2>
+ <h3> Nome:    </h3> <i class="glyphicon glyphicon-user"></i>
+ <h3> E-mail:    </h3> <i class="glyphicon glyphicon-envelope"></i>
+ <h3> Telefono:    </h3>  <i class="material-icons">computer</i>
+
+  
 <p> <a href="intestazione.html">  intestazione.html </a> </p>
   <p> <a href="formattazione.html">  formattazione.html </a> </p>
   <p> <a href="foto.html">  foto.html </a> </p>
