--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -3,7 +3,7 @@
     <title> Box Flottanti</title>
     <h1> Come fare i box flottanti</h1>
     <style>
-     .div {
+     div {
       width:300 px;
       margin:10 px ;
        background-color:lightblue;
@@ -12,7 +12,7 @@
       margin: 20 px;
       }
 
-      .div {
+      div {
         <iframe width="560" 
         height="315" 
         src="https://www.youtube.com/embed/TxcJ2drr554?si=hC8sp5dGxVJ9jJfM" 
