--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -1,39 +1,43 @@
-<html lang="it">
-  <head>
-    <title> Box Flottanti</title>
-    <h1> Come fare i box flottanti</h1>
-    <style>
-     div {
-      width:300 px;
-      margin:10 px ;
-       background-color:lightblue;
-      border: 15 px solid green;
-      padding: 50 px;
-      margin: 20 px;
-      }
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+* {
+  box-sizing: border-box;
+}
 
-      div {
-        <iframe width="560" 
-        height="315" 
-        src="https://www.youtube.com/embed/TxcJ2drr554?si=hC8sp5dGxVJ9jJfM" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen>
-        </iframe>
-        }
+.box {
+  float: left;
+  width: 33.33%;
+  padding: 50px;
+}
 
-        
-    </style>
-  </head>
-  <body>
-    <div class="container clearfix">
-      <div class="box"> Box1 </div>
-      <div class="box"> Box2 </div>
-      <div class="box"> Box3 </div>
-      <div class="box"> Box4 </div>
-    </div>
-    
-  </body>
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+<h2>Grid of Boxes</h2>
+<p>Float boxes side by side:</p>
+
+<div class="clearfix">
+  <div class="box" style="background-color:#bbb">
+  <p>Some text inside the box.</p>
+  </div>
+  <div class="box" style="background-color:#ccc">
+  <p>Some text inside the box.</p>
+  </div>
+  <div class="box" style="background-color:#ddd">
+  <p>Some text inside the box.</p>
+  </div>
+</div>
+
+<p><strong>Note:</strong> Here, we use the clearfix hack to take care of the layout flow. 
+We also use the box-sizing property to make sure that the box doesn't break due to extra padding. Try to remove this code to see the effect.</p>
+
+</body>
 </html>
