--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -8,8 +8,8 @@
 
 .box {
   float: left;
-  width: 33.33%;
-  padding: 50px;
+  width: 33.33 %;
+  padding: 50 px;
 }
 
 .clearfix::after {
@@ -25,13 +25,13 @@
 <p>Float boxes side by side:</p>
 
 <div class="clearfix">
-  <div class="box" style="background-color:#bbb">
+  <div class="box" style="background-color:lightgreen">
   <p>Some text inside the box.</p>
   </div>
-  <div class="box" style="background-color:#ccc">
+  <div class="box" style="background-color:#ffff">
   <p>Some text inside the box.</p>
   </div>
-  <div class="box" style="background-color:#ddd">
+  <div class="box" style="background-color: #000">
   <p>Some text inside the box.</p>
   </div>
 </div>
