--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -8,10 +8,22 @@
 
 .box {
   float: left;
-  width: 33.33%;
+  width: 50%;
   padding: 50px;
 }
 
+  .box {
+  float: center;
+  width: 33.33%;
+  padding: 50px;
+}
+  
+.box {
+  float: right;
+  width: 33.33%;
+  padding: 50px;
+}
+  
 .clearfix::after {
   content: "";
   clear: both;
