--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -10,18 +10,21 @@
   float: left;
   width: 50%;
   padding: 50px;
+  border: 3px;
 }
 
   .box {
   float: center;
   width: 33.33%;
   padding: 50px;
+  border: 3px;
 }
   
 .box {
   float: right;
   width: 33.33%;
   padding: 50px;
+  border: 3px;
 }
   
 .clearfix::after {
