--- a/boxFlottanti.html
+++ b/boxFlottanti.html
@@ -40,13 +40,13 @@
 <p>Float boxes side by side:</p>
 
 <div class="clearfix">
-  <div class="box" style="background-color:lightgreen">
+  <div class="box" style="background-color:red">
   <p>Some text inside the box.</p>
   </div>
   <div class="box" style="background-color:#ffff">
   <p>Some text inside the box.</p>
   </div>
-  <div class="box" style="background-color: #000">
+  <div class="box" style="background-color: green">
   <p>Some text inside the box.</p>
   </div>
 </div>
