--- a/BoxFlottantius.html
+++ b/BoxFlottantius.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+  *{
+    box-sizing: border box;
+  }
 
+  .header, .footer{
+    width: 100%;
+  }
+
+
+
+
+<body>
+<div class="header">
+
+</body>
+
+
+
+
+  
