--- a/BoxFlottantius.html
+++ b/BoxFlottantius.html
@@ -6,9 +6,18 @@
     box-sizing: border box;
   }
 
-  .header, .footer{
-   float: center;
-    width: 100%;
+  .header {}
+ .footer{
+   clear:both;
+   width: 100%;
+   border: 3px;
+   padding: 10px;
+   background-color: orange;
+        }
+   
+  .left{ 
+   float: left;
+   width: 100%;
    border: 3px;
    padding: 10px;
    background-color: orange;
