--- a/BoxFlottantius.html
+++ b/BoxFlottantius.html
@@ -6,7 +6,11 @@
     box-sizing: border box;
   }
 
-  .header {}
+  .header {
+   width: 100%;
+   border: 3px;
+   padding: 10px;
+  }
  .footer{
    clear:both;
    width: 100%;
@@ -31,11 +35,9 @@
 
 
 <body>
-<div class="clearfix">
-  <div class="header">
-  <p> Hello world </p>
-  </div>
-</div>
+<div class="clearfix"> </div>
+  <div class="header"> </div>
+ <div class="left"> </div>
 </body>
 
 
