--- a/BoxFlottantius.html
+++ b/BoxFlottantius.html
@@ -16,11 +16,13 @@
    width: 100%;
    border: 3px;
    padding: 10px;
-   background-color: orange;
+
         }
-   
+div {position:absolute;}
+ 
   .left{ 
    float: left;
+   height: 50%;
    width: 100%;
    border: 3px;
    padding: 10px;
@@ -37,8 +39,9 @@
 </head>
 <body>
 <div class="clearfix"> </div>
-  <div class="header"> </div>
+ <div class="header"> </div>
  <div class="left"> </div>
+ <div class="footer"> </div>
 </body>
 
 
