--- a/Bootstrappius.html
+++ b/Bootstrappius.html
@@ -13,17 +13,17 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Colonna 3 moschettieri</h3>
+      <h3>Colonna 3 moschettieri♫</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <h3>Colonna 2 extra ken obi</h3>
+      <h3>Colonna 2 fingers♫</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <h3>Colonna 1 ken obi</h3>        
+      <h3>Colonna 1 ken obi♫</h3>        
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
