--- a/prova.html
+++ b/prova.html
@@ -1,3 +1,4 @@
+<body>
 <div class="container-fluid p-5 bg-primary text-white text-center">
   <h1> Pagina Bootstrap</h1>
   <p>Resize this responsive page to see the effect!</p> 
