--- a/prova.html
+++ b/prova.html
@@ -1,28 +1,84 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: white;
+}
+
+.header, .footer {
+  background-color: grey;
+  color: white;
+  border: "3px";
+  padding: "15px";
+}
+
+.column {
+  float: left;
+  padding: "15px";
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.menu {
+  width: "25%";
+}
+
+.content {
+  width: "75%";
+}
+
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  padding: "8px";
+  margin-bottom: "8px";
+  background-color: #33b5e5;
+  color: #ffffff;
+}
+
+.menu li:hover {
+  background-color: #0099cc;
+}
+</style>
+</head>
 <body>
-<div class="container-fluid p-5 bg-primary text-white text-center">
-  <h1> Pagina Bootstrap</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+
+<div class="header">
+  <h1>Chania</h1>
 </div>
-  
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-sm-4">
-      <h3>Colonna 3 moschettieri♫</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Colonna 2 fingers♫</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Colonna 1 ken obi♫</h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
+
+<div class="clearfix">
+  <div class="column menu">
+    <ul>
+      <li>The Flight</li>
+      <li>The City</li>
+      <li>The Island</li>
+      <li>The Food</li>
+    </ul>
+  </div>
+
+  <div class="column content">
+   
   </div>
 </div>
+
+</body>
+</html>
+
+</body>
+</html>
 
 </body>
 </html>
