--- a/prova.html
+++ b/prova.html
@@ -10,15 +10,19 @@ body {
 }
 
 .header, .footer {
-  background-color:grey;
+  background-color:light blue;
   color: white;
-  border: "3px";
-  padding: "15px";
+  border: 3px;
+  padding: 15px;
 }
 
+  .p1 {
+  font-family: "Brush Script MT", Cursive;
+}
+  
 .column {
   float: left;
-  padding: "15px";
+  padding: 15px;
 }
 
 .clearfix::after {
@@ -28,11 +32,11 @@ body {
 }
 
 .menu {
-  width: "25%";
+  width: 25%;
 }
 
 .content {
-  width: "75%";
+  width: 75%;
 }
 
 .menu ul {
@@ -42,8 +46,8 @@ body {
 }
 
 .menu li {
-  padding: "8px";
-  margin-bottom: "8px";
+  padding: 8px;
+  margin-bottom: 8px;
   background-color: #33b5e5;
   color: #ffffff;
 }
