--- a/prova.html
+++ b/prova.html
@@ -1,88 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
-<style>
-* {
-  box-sizing: border-box;
-}
-body {
-  background-color: white;
-}
-
-.header, .footer {
-  background-color:light blue;
-  color: white;
-  border: 3px;
-  padding: 15px;
-}
-
-  .p1 {
-  font-family: "Brush Script MT", Cursive;
-}
-  
-.column {
-  float: left;
-  padding: 15px;
-}
-
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.menu {
-  width: 25%;
-}
-
-.content {
-  width: 75%;
-}
-
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.menu li {
-  padding: 8px;
-  margin-bottom: 8px;
-  background-color: #33b5e5;
-  color: #ffffff;
-}
-
-.menu li:hover {
-  background-color: #0099cc;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scuola Esempio</title>
+  <link rel="stylesheet" href="stili.css">
 </head>
 <body>
+  <header>
+    <h1>Istituto Comprensivo Galileo Galilei</h1>
+    <p>Educazione, Innovazione, Futuro</p>
+  </header>
 
-<div class="header">
-  <h1>Chania</h1>
-</div>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Chi Siamo</a>
+    <a href="#">Offerta Formativa</a>
+    <a href="#">Contatti</a>
+  </nav>
 
-<div class="clearfix">
-  <div class="column menu">
-    <ul>
-      <li>The Flight</li>
-      <li>The City</li>
-      <li>The Island</li>
-      <li>The Food</li>
-    </ul>
-  </div>
+  <main>
+    <h2>Benvenuti nel nostro sito scolastico</h2>
+    <p>
+      Il nostro istituto si impegna a offrire un'istruzione di qualità in un ambiente inclusivo e stimolante.
+    </p>
+    <p>
+      Esplora il nostro sito per scoprire di più sui nostri progetti, il corpo docente e le attività extracurriculari.
+    </p>
+  </main>
 
-  <div class="column content">
-   
-  </div>
-</div>
-
+  <footer>
+    <p>&copy; 2025 Istituto Comprensivo Galileo Galilei - Tutti i diritti riservati</p>
+  </footer>
 </body>
 </html>
-
-</body>
-</html>
-
-</body>
-</html> 
